[project]
name = "fastapi-openai-agents-sdk"
version = "0.1.0"
description = "FastAPI server with OpenAI Agents SDK using Groq"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6",
    "openai-agents>=0.6.2",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.32.1",
]
